@@ -22,12 +22,7 @@
 
 /* Must be kept in sync with mesg.gperf hash table */
 #define SEND_HANDLERS \
-	X(clear) \
-	X(close) \
-	X(connect) \
 	X(ctcp) \
-	X(disconnect) \
-	X(ignore) \
 	X(join) \
 	X(me) \
 	X(msg) \
@@ -35,9 +30,7 @@
 	X(part) \
 	X(privmsg) \
 	X(quit) \
-	X(raw) \
 	X(topic) \
-	X(unignore) \
 	X(version)
 
 /* Send handler prototypes */
@@ -64,6 +57,21 @@ SEND_HANDLERS
 #define X(cmd) static int recv_##cmd(struct parsed_mesg*, struct server*);
 RECV_HANDLERS
 #undef X
+
+struct recv_handler
+{
+	char *name;
+	int (*func)(struct parsed_mesg*, struct server*);
+};
+
+struct send_handler
+{
+	char *name;
+	int (*func)(char*, struct server*, struct channel*);
+};
+
+#include "src/handlers/recv.gperf.h"
+#include "src/handlers/send.gperf.h"
 
 #ifdef JPQ_THRESHOLD
 static const unsigned int jpq_threshold = JPQ_THRESHOLD;
@@ -118,135 +126,6 @@ enum numeric {
 /*
  * Message sending handlers
  */
-
-struct send_handler
-{
-	char *name;
-	int (*func)(char*, struct server*, struct channel*);
-};
-
-/* TODO: prototype this and other functions */
-static unsigned int
-send_handler_hash(register const char *str, register size_t len)
-{
-	/* Perfect hash function, generated by gperf mesg.gperf */
-
-	static const unsigned char asso_values[] = {
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25,  5,  5,  5,
-		25, 10, 25,  0, 20, 25, 25,  0,  0,  0,
-		 0, 15,  0,  5,  0,  0, 10,  0, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25
-	};
-
-	register unsigned int hval = len;
-
-	switch (hval) {
-		default:
-			hval += asso_values[(unsigned char)str[2]];
-		/* FALLTHROUGH */
-		case 2:
-		case 1:
-			hval += asso_values[(unsigned char)str[0]];
-			break;
-    }
-
-	return hval;
-}
-
-// TODO: should be regenerated
-const struct send_handler*
-send_handler_lookup(register const char *str, register size_t len)
-{
-	/* Perfect hash function lookup, generated by gperf mesg.gperf */
-
-	enum {
-		TOTAL_KEYWORDS  = 17,
-		MIN_WORD_LENGTH = 2,
-		MAX_WORD_LENGTH = 10,
-		MIN_HASH_VALUE  = 2,
-		MAX_HASH_VALUE  = 24
-	};
-
-	static const struct send_handler send_handlers[] = {
-		{"",           NULL},
-		{"",           NULL},
-		{"ME",         send_me},
-		{"RAW",        send_raw},
-		{"PART",       send_part},
-		{"TOPIC",      send_topic},
-		{"IGNORE",     send_ignore},
-		{"PRIVMSG",    send_privmsg},
-		{"UNIGNORE",   send_unignore},
-		{"NICK",       send_nick},
-		{"CLOSE",      NULL},
-		{"",           NULL},
-		{"CONNECT",    NULL},
-		{"MSG",        send_msg},
-		{"CTCP",       send_ctcp},
-		{"CLEAR",      NULL},
-		{"",           NULL},
-		{"VERSION",    send_version},
-		{"",           NULL},
-		{"QUIT",       send_quit},
-		{"DISCONNECT", NULL},
-		{"",           NULL},
-		{"",           NULL},
-		{"",           NULL},
-		{"JOIN",       send_join}
-    };
-
-	(void)send_connect;
-	(void)send_disconnect;
-	(void)send_clear;
-	(void)send_close;
-
-	if (len <= MAX_WORD_LENGTH && len >= MIN_WORD_LENGTH) {
-
-		register unsigned int key = send_handler_hash(str, len);
-
-		if (key <= MAX_HASH_VALUE) {
-
-			register const char *s = send_handlers[key].name;
-
-			if (*str == *s && !strcmp(str + 1, s + 1))
-				return &send_handlers[key];
-		}
-	}
-
-	return NULL;
-}
-
-// TODO not used
-static int send_connect(char *m, struct server *s, struct channel *c)
-{ (void)m; (void)s; (void)c; return 0; }
-static int send_disconnect(char *m, struct server *s, struct channel *c)
-{ (void)m; (void)s; (void)c; return 0; }
-static int send_clear(char *m, struct server *s, struct channel *c)
-{ (void)m; (void)s; (void)c; return 0; }
-static int send_close(char *m, struct server *s, struct channel *c)
-{ (void)m; (void)s; (void)c; return 0; }
 
 void
 send_mesg(struct server *s, struct channel *chan, char *mesg)
@@ -348,29 +227,6 @@ send_me(char *mesg, struct server *s, struct channel *c)
 		failf(c, "sendf fail: %s", io_err(ret));
 
 	newlinef(c, 0, "*", "%s %s", s->nick, mesg);
-
-	return 0;
-}
-
-// TODO: :ignore
-static int
-send_ignore(char *mesg, struct server *s, struct channel *c)
-{
-	/* /ignore [nick] */
-
-	char *nick;
-
-	if (!s)
-		fail(c, "Error: Not connected to server");
-
-	if (!(nick = getarg(&mesg, " ")))
-		; /* TODO: print ignore list */
-
-	else if (user_list_add(&(s->ignore), nick, MODE_EMPTY) == USER_ERR_DUPLICATE)
-		failf(c, "Error: Already ignoring '%s'", nick);
-
-	else
-		newlinef(c, 0, "--", "Ignoring '%s'", nick);
 
 	return 0;
 }
@@ -494,21 +350,6 @@ send_privmsg(char *mesg, struct server *s, struct channel *c)
 }
 
 static int
-send_raw(char *mesg, struct server *s, struct channel *c)
-{
-	/* /raw <raw message> */
-
-	int ret;
-
-	if ((ret = io_sendf(s->connection, "%s", mesg)))
-		failf(c, "sendf fail: %s", io_err(ret));
-
-	newline(c, 0, "RAW >>", mesg);
-
-	return 0;
-}
-
-static int
 send_topic(char *mesg, struct server *s, struct channel *c)
 {
 	/* /topic [topic] */
@@ -526,29 +367,6 @@ send_topic(char *mesg, struct server *s, struct channel *c)
 		if ((ret = io_sendf(s->connection, "TOPIC %s :%s", c->name, mesg)))
 			failf(c, "sendf fail: %s", io_err(ret));
 	}
-
-	return 0;
-}
-
-// TODO: :unignore
-static int
-send_unignore(char *mesg, struct server *s, struct channel *c)
-{
-	/* /unignore [nick] */
-
-	char *nick;
-
-	if (!s)
-		fail(c, "Error: Not connected to server");
-
-	if (!(nick = getarg(&mesg, " ")))
-		; /* TODO: print ignore list */
-
-	else if (user_list_del(&(s->ignore), nick) == USER_ERR_NOT_FOUND)
-		failf(c, "Error: '%s' not on ignore list", nick);
-
-	else
-		newlinef(c, 0, "--", "No longer ignoring '%s'", nick);
 
 	return 0;
 }
@@ -600,101 +418,6 @@ send_version(char *mesg, struct server *s, struct channel *c)
 /*
  * Message receiving handlers
  */
-
-struct recv_handler
-{
-	char *name;
-	int (*func)(struct parsed_mesg*, struct server*);
-};
-
-static unsigned int
-recv_handler_hash(register const char *str, register size_t len)
-{
-	static const unsigned char asso_values[] = {
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 14, 25, 25, 25,  5,
-		25, 25, 25,  5,  9, 15, 25,  4,  5,  0,
-		 0, 10,  0, 25,  0,  5, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25, 25, 25, 25, 25,
-		25, 25, 25, 25, 25, 25
-    };
-
-	return len + asso_values[(unsigned char)str[1]] + asso_values[(unsigned char)str[0]];
-}
-
-const struct recv_handler *
-recv_handler_lookup (register const char *str, register size_t len)
-{
-	enum {
-		TOTAL_KEYWORDS  = 12,
-		MIN_WORD_LENGTH = 4,
-		MAX_WORD_LENGTH = 7,
-		MIN_HASH_VALUE  = 4,
-		MAX_HASH_VALUE  = 24
-	};
-
-	static const struct recv_handler recv_handlers[] = {
-		{"",        NULL},
-		{"",        NULL},
-		{"",        NULL},
-		{"",        NULL},
-		{"PONG",    recv_pong},
-		{"TOPIC",   recv_topic},
-		{"",        NULL},
-		{"PRIVMSG", recv_privmsg},
-		{"MODE",    recv_mode},
-		{"PING",    recv_ping},
-		{"ERROR",   recv_error},
-		{"NOTICE",  recv_notice},
-		{"",        NULL},
-		{"JOIN",    recv_join},
-		{"NICK",    recv_nick},
-		{"",        NULL},
-		{"",        NULL},
-		{"",        NULL},
-		{"PART",    recv_part},
-		{"QUIT",    recv_quit},
-		{"",        NULL},
-		{"",        NULL},
-		{"",        NULL},
-		{"",        NULL},
-		{"KICK",    recv_kick}
-	};
-
-	if (len <= MAX_WORD_LENGTH && len >= MIN_WORD_LENGTH) {
-
-		register unsigned int key = recv_handler_hash (str, len);
-
-		if (key <= MAX_HASH_VALUE) {
-			register const char *s = recv_handlers[key].name;
-
-			if (*str == *s && !strcmp (str + 1, s + 1))
-				return &recv_handlers[key];
-		}
-	}
-
-	return 0;
-}
 
 void
 recv_mesg(struct server *s, struct parsed_mesg *p)
